Refactor - plugin 'spa-loader-content-html.js' versión 2

--- a/src/components/layouts/layout-footer.html
+++ b/src/components/layouts/layout-footer.html
@@ -23,7 +23,10 @@
         >
         
         <h2 class="footer__title"> 
-            Curso de TypeScript - Udemy Fernando Herrera 
+             
+            <p id="footerTitle"> 
+                <!--  *****  renderizado del título con el plugin  *****  -->
+            </p>
         </h2>
         
         <img 
