--- a/src/components/layouts/layout-navbar.html
+++ b/src/components/layouts/layout-navbar.html
@@ -205,7 +205,7 @@
 
          <!--  -----  item 11  -----  -->
         <li class="navbar__item">
-            <a href="#" data-id="tareaTiposDatos">
+            <a href="#" data-id="tareaTiposDeDatos">
                 11 - Tarea
             </a>
         </li>
