--- a/src/styles/01-bases-de-typescript/02-tipos-de-datos/11-tarea-tipos-de-datos.css
+++ b/src/styles/01-bases-de-typescript/02-tipos-de-datos/11-tarea-tipos-de-datos.css
@@ -4,7 +4,7 @@
     ----------  /cursos/  -------------------------------------------------------
     ----------  /typescript-completa-guia-manual-de-mano/  ----------------------
     ----------  /src/styles/01-bases-de-typescript/02-tipos-de-datos/  ----------
-    ----------  /01-booleans.css  -----------------------------------------------
+    ----------  /11-tarea-tipos-de-datos.css  -----------------------------------
     -----------------------------------------------------------------------------
 */
 
@@ -13,7 +13,7 @@
     width: 100%;
     max-width: 120rem;
     aspect-ratio: 16/9;
-    background-image: url('/cursos/typescript-completa-guia-manual-de-mano/assets/img/01-bases-de-typescript/02-tipos-de-datos/01-booleans.avif');
+    background-image: url('/cursos/typescript-completa-guia-manual-de-mano/assets/img/01-bases-de-typescript/02-tipos-de-datos/11-tarea-tipos-de-datos.avif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
