Add - Funciones en TypeScript

--- a/src/components/layouts/layout-navbar.html
+++ b/src/components/layouts/layout-navbar.html
@@ -23,24 +23,20 @@
 
             <!--  -----  Logo de typescript -----  -->
             <a href="#" target="_blank" rel="noopener noreferrer">
-                <img 
-                    class="navbar__logo-typescript"
-                    src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/typescript-logo.svg" 
-                    alt="Logo TypeScript"
-                >
+                <img class="navbar__logo-typescript"
+                    src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/typescript-logo.svg"
+                    alt="Logo TypeScript">
             </a>
 
-            <h3> 
-                HOME 
+            <h3>
+                HOME
             </h3>
 
             <!--  -----  Logo de JavaScript -----  -->
             <a href="https://jqueryui.com/" target="_blank" rel="noopener noreferrer">
-                <img 
-                    class="navbar__logo-javascript"
+                <img class="navbar__logo-javascript"
                     src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/javascript-logo.svg"
-                    alt="Logo JavaScript"
-                >
+                    alt="Logo JavaScript">
             </a>
 
         </div>
@@ -65,30 +61,26 @@
 
             <!--  -----  Logo de TypeScript -----  -->
             <a href="#" target="_blank" rel="noopener noreferrer">
-                <img 
-                    class="navbar__logo-typescript"
-                    src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/typescript-logo.svg" 
-                    alt="Logo TypeScript"
-                >
+                <img class="navbar__logo-typescript"
+                    src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/typescript-logo.svg"
+                    alt="Logo TypeScript">
             </a>
 
-            <h3> 
-                Bases de TypeScript 
+            <h3>
+                Bases de TypeScript
                 <br>
                 1 - Introducción
             </h3>
 
-           <!--  -----  Logo de JavaScript -----  -->
+            <!--  -----  Logo de JavaScript -----  -->
             <a href="https://jqueryui.com/" target="_blank" rel="noopener noreferrer">
-                <img 
-                    class="navbar__logo-javascript"
+                <img class="navbar__logo-javascript"
                     src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/javascript-logo.svg"
-                    alt="Logo JavaScript"
-                >
+                    alt="Logo JavaScript">
             </a>
 
         </div>
-       
+
         <!--  -----  item 1  -----  -->
         <li class="navbar__item">
             <a href="#" data-id="inferirTipos">
@@ -108,26 +100,22 @@
 
             <!--  -----  Logo de TypeScript -----  -->
             <a href="#" target="_blank" rel="noopener noreferrer">
-                <img 
-                    class="navbar__logo-typescript"
-                    src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/typescript-logo.svg" 
-                    alt="Logo TypeScript"
-                >
+                <img class="navbar__logo-typescript"
+                    src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/typescript-logo.svg"
+                    alt="Logo TypeScript">
             </a>
 
-            <h3> 
-                Bases de TypeScript 
+            <h3>
+                Bases de TypeScript
                 <br>
                 2 - Tipos de Datos
             </h3>
 
             <!--  -----  Logo de JavaScript -----  -->
             <a href="https://javascript.com/" target="_blank" rel="noopener noreferrer">
-                <img 
-                    class="navbar__logo-javascript"
+                <img class="navbar__logo-javascript"
                     src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/javascript-logo.svg"
-                    alt="Logo JavaScript"
-                >
+                    alt="Logo JavaScript">
             </a>
 
         </div>
@@ -168,7 +156,7 @@
             </a>
         </li>
 
-         <!--  -----  item 6  -----  -->
+        <!--  -----  item 6  -----  -->
         <li class="navbar__item">
             <a href="#" data-id="tuples">
                 6 - Tuples
@@ -203,13 +191,95 @@
             </a>
         </li>
 
-         <!--  -----  item 11  -----  -->
+        <!--  -----  item 11  -----  -->
         <li class="navbar__item">
             <a href="#" data-id="tareaTiposDeDatos">
                 11 - Tarea
             </a>
         </li>
-              
+
+
+    </ul>
+
+
+
+    <!--  -----  Lista del menú (Bases de TypeScript - 3. Funciones)  -----  -->
+    <ul class="navbar__list">
+
+        <!--  -----  Título del menú (navbar)  -----  -->
+        <div class="navbar__title">
+
+            <!--  -----  Logo de TypeScript -----  -->
+            <a href="#" target="_blank" rel="noopener noreferrer">
+                <img class="navbar__logo-typescript"
+                    src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/typescript-logo.svg"
+                    alt="Logo TypeScript">
+            </a>
+
+            <h3>
+                Bases de TypeScript
+                <br>
+                3 - Funciones
+            </h3>
+
+            <!--  -----  Logo de JavaScript -----  -->
+            <a href="https://javascript.com/" target="_blank" rel="noopener noreferrer">
+                <img class="navbar__logo-javascript"
+                    src="/cursos/typescript-completa-guia-manual-de-mano/assets/logos/javascript-logo.svg"
+                    alt="Logo JavaScript">
+            </a>
+
+        </div>
+
+
+        <!--  -----  item 1  -----  -->
+        <li class="navbar__item">
+            <a href="#" data-id="functions">
+                1 - Funciones Básicas
+            </a>
+        </li>
+
+        <!--  -----  item 2  -----  -->
+        <li class="navbar__item">
+            <a href="#" data-id="args-required">
+                2 - Argumentos Requeridos
+            </a>
+        </li>
+
+        <!--  -----  item 3  -----  -->
+        <li class="navbar__item">
+            <a href="#" data-id="args-optional">
+                3 - Argumentos Opcionales
+            </a>
+        </li>
+
+        <!--  -----  item 4  -----  -->
+        <li class="navbar__item">
+            <a href="#" data-id="args-default">
+                4 - Argumentos por Defecto
+            </a>
+        </li>
+
+        <!--  -----  item 5  -----  -->
+        <li class="navbar__item">
+            <a href="#" data-id="args-rest">
+                5 - Argumentos Rest
+            </a>
+        </li>
+
+        <!--  -----  item 6  -----  -->
+        <li class="navbar__item">
+            <a href="#" data-id="function-type">
+                6 - Tipo de Funciones
+            </a>
+        </li>
+
+        <!--  -----  item 7  -----  -->
+        <li class="navbar__item">
+            <a href="#" data-id="tarea-funciones">
+                7 - Tarea de Funciones
+            </a>
+        </li>
 
     </ul>
 
